[metadata]
name = magiceden_solana
version = 1.0.1
author = vmpyre.sol (Discord)
author_email = vmpyrestax@gmail.com
description = Python SDK for interacting with the Magiceden Official APIs at https://api.magiceden.dev/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmpyre/magiceden_solana
project_urls =
    Bug Tracker = https://github.com/vmpyre/magiceden_solana/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests

[options.packages.find]
where = src